jasn/examples/invalid/odd_hex_binary.jasn
/* Hex binary must have even number of digits */
{
  bad_hex: hex"ABC"
}
